move caruso fix some text make location smaller

--- a/_sass/location.scss
+++ b/_sass/location.scss
@@ -1,7 +1,7 @@
 #ravello {
 	background-image: url('/images/geometry.jpg');
 	color: $grey-color;
-    height: 390em;
+    height: 360em;
 	hr {
 		border-color: $grey-color;
 	}
